# drone-object-detection

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
models/: export_drone_model.sh
src/: camera.hpp  camera_linux.cpp  camera_macos.mm  camera_windows.cpp  detector.hpp  detector_motion.cpp  detector_onnx.cpp  detector_onnx_stub.cpp  display.hpp  display_macos.mm  display_null.cpp  display_windows.cpp  main.cpp  platform.hpp  tracker.cpp  tracker.hpp
